--- a/frontend/src/pages/GenrePage.css
+++ b/frontend/src/pages/GenrePage.css
@@ -6,9 +6,9 @@
 }
 
 .genre-content {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 40px 20px;
+  padding: 0px 20px;
 }
 
 .genre-title {
@@ -16,14 +16,16 @@
   font-weight: 600;
   margin: 0 0 30px 0;
   color: #ffffff;
+  padding-left: 15px;
 }
 
 .genre-description {
   margin-bottom: 30px;
+  padding-left: 15px;
 }
 
 .genre-description p {
-  font-size: 16px;
+  font-size: 20px;
   line-height: 1.6;
   color: #ffffff;
   margin: 0 0 20px 0;
@@ -39,7 +41,7 @@
   font-weight: 600;
   color: #ffffff;
   margin: 0 0 30px 0;
-  padding-bottom: 10px;
+  padding: 0px 0px 10px 15px;
   border-bottom: 2px solid #555555;
 }
 
