--- a/frontend/src/pages/PersonPage.css
+++ b/frontend/src/pages/PersonPage.css
@@ -2,14 +2,13 @@
   background-color: #231f20;
   color: #ffffff;
   min-height: 100vh;
-  padding: 0;
+  padding: 20px;
 }
 
 .person-layout {
   display: flex;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 40px 20px;
   gap: 40px;
   align-items: flex-start;
 }
@@ -44,6 +43,7 @@
 
 .person-info {
   margin-bottom: 50px;
+  padding-left: 15px;
 }
 
 .person-name {
@@ -51,6 +51,7 @@
   font-weight: 600;
   margin: 0 0 40px 0;
   color: #ffffff;
+  padding: 0px;
 }
 
 .person-details {
@@ -87,14 +88,15 @@
   font-weight: 600;
   color: #ffffff;
   margin: 0 0 30px 0;
-  padding-bottom: 10px;
+  padding: 0px 0px 10px 15px;
   border-bottom: 2px solid #555555;
 }
 
-.films-grid {
+.films-grid_1 {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
+  padding: 0px 15px;
 }
 
 /* Адаптивность */
@@ -128,6 +130,7 @@
   
   .person-name {
     font-size: 36px;
+    text-align: center;
   }
   
   .films-grid {
@@ -139,6 +142,7 @@
 @media (max-width: 480px) {
   .person-name {
     font-size: 28px;
+    text-align: center;
   }
   
   .person-photo-container {
