--- a/frontend/src/pages/FilmPage.css
+++ b/frontend/src/pages/FilmPage.css
@@ -10,6 +10,7 @@
   gap: 5%;
   max-width: 100%;
   align-items: flex-start;
+  padding: 20px;
 }
 
 .film-poster-container {
@@ -128,6 +129,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  border-radius: 15px;
 }
 
 .no-sessions {
