--- a/frontend/src/pages/PersonPage.css
+++ b/frontend/src/pages/PersonPage.css
@@ -109,7 +109,7 @@
     width: 250px;
   }
   
-  .films-grid {
+  .films-grid_1 {
     grid-template-columns: repeat(3, 1fr);
   }
 }
@@ -133,7 +133,7 @@
     text-align: center;
   }
   
-  .films-grid {
+  .films-grid_1 {
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
   }
@@ -149,7 +149,7 @@
     max-width: 250px;
   }
   
-  .films-grid {
+  .films-grid_1 {
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
   }
