--- a/frontend/src/components/SessionCard.css
+++ b/frontend/src/components/SessionCard.css
@@ -66,11 +66,11 @@
   cursor: pointer;
   flex-direction: column;
   align-items: center;
-  width: 150px; /* Ограничиваем ширину контейнера */
+  width: 150px;
 }
 
 .film-poster-large {
-  width: 100%;  /* Ширина постера будет 100% от ширины контейнера */
+  width: 100%;
   height: 225px;
   object-fit: cover;
   border-radius: 8px;
@@ -85,10 +85,10 @@
   margin-top: 10px;
   cursor: pointer;
   transition: color 0.3s ease;
-  word-wrap: break-word;   /* Разрешаем перенос длинных слов */
-  hyphens: auto;           /* Используем автоматическое разбиение слов */
-  max-width: 100%;         /* Название не будет выходить за ширину контейнера */
-  white-space: normal;     /* Позволяем переносить строки */
+  word-wrap: break-word;
+  hyphens: auto;
+  max-width: 100%;
+  white-space: normal;
 }
 
 .film-name:hover {
